# clipper2c

./: .gitignore  .gitmodules  CMakeLists.txt  clipper2c.pc.cmakein
examples/: offset.c  sample.c
include/: clipper2c.h
include/clipper2c/: clipper2c.h  types.h
src/: clipper2c.cpp  clipper64.cpp  clipperd.cpp  clipperoffset.cpp  conv.cpp  conv.h  polytree.cpp  rect.cpp
